kubernetes/apps/routing/traefik/internal/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: traefik-internal-network-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-internal-routing
  ingress:
    - fromEntities:
      - cluster
      toPorts:
      - ports:
        - port: "2222"
          protocol: TCP
        - port: "8000"
          protocol: ANY
        - port: "8443"
          protocol: ANY
    - fromCIDRSet:
      - cidrGroupRef: group-lan
      toPorts:
      - ports:
        - port: "2222"
          protocol: TCP
        - port: "8000"
          protocol: ANY
        - port: "8443"
          protocol: ANY
  egress:
    - toEntities:
      - cluster
    - toCIDRSet:
        - cidrGroupRef: group-truenas
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
